# Falcor

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json
.vscode-default/: settings.json
Source/Falcor/: CMakeLists.txt
Source/Falcor/Scene/: HitInfo.cpp  PTexBuilder.cpp  PTexBuilder.h  Scene.cpp  Scene.h  Scene.slang  SceneBuilder.cpp  SceneBuilder.h  SceneIDs.h  SceneTypes.slang  TriangleMesh.cpp  TriangleMesh.h
Source/Mogwai/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  Mogwai.cpp  Mogwai.h  Network.cpp  Network.h  WebServer.cpp  WebServer.h
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/BlurPass/: BlurPass.cpp  BlurPass.h  BlurPass.ps.slang  CMakeLists.txt
Source/RenderPasses/GBuffer/: CMakeLists.txt  GBufferBase.cpp
Source/RenderPasses/InstantRadiosity/: CMakeLists.txt  CreateVPL.cs.slang  IRShading.cs.slang  IRShadingPass.cpp  IRShadingPass.h  InstantRadiosity.cpp  InstantRadiosity.h  PhotonGenPass.cs.slang  ShadingPass.cs.slang  SharedTypes.slang  VPLData.slang  VPLGenPass.cpp  VPLGenPass.h  VPLVisibility.cs.slang  VPLVisibilityPass.cpp  VPLVisibilityPass.h
Source/RenderPasses/LightSample/: CMakeLists.txt  LightSample.cpp  LightSample.cs.slang  LightSample.h
Source/RenderPasses/PathTracer/: LoadShadingData.slang  PathState.slang  PathTracer.cpp  PathTracer.h  PathTracer.slang  StaticParams.slang  (+1 more)
Source/plugins/: CMakeLists.txt
build_scripts/: deploycommon.bat
scripts/: DirectLight.py  GBufferRT.py  GBufferRaster.py  InstantRadiosity.py  PathTracerDataset.py  PathTracerNoTM.py  ShadowPass.py  VPLGenTest.py  VPLVisTest.py
(+68 files in other folders)
